<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * This file is subject to the terms and conditions defined in
  ~  * file 'LICENSE.txt', which is part of this source code package.
  ~  */
  ~
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainScreenActivity">


    <!--PlaceHolder for the fragments-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_placeholder_recipe_list">
    </FrameLayout>

    <!--This placeholder will hold the nav bar between steps of execution-->
    <FrameLayout
        android:id="@+id/fragment_placeholder_nav_bar"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_placeholder_recipe_list"
        app:layout_constraintVertical_bias="1.0">
    </FrameLayout>




</android.support.constraint.ConstraintLayout>