<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * This file is subject to the terms and conditions defined in
  ~  * file 'LICENSE.txt', which is part of this source code package.
  ~  */
  ~
  -->


<!--This recyclerView will hold the Recipe list fetched from network-->

<android.support.v7.widget.RecyclerView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rv_recipes"
    xmlns:android="http://schemas.android.com/apk/res/android">
</android.support.v7.widget.RecyclerView>