<resources>
    <string name="app_name">BakeMe</string>

    <!--Manifest Strings-->
    <string name="title_activity_widget_configuration">widgetConfigurationActivity</string>

    <!--Configuration activity strings-->
    <string name="tv_widget_header">List of available recipes.</string>

    <!--Nav bar fragment strings-->
    <string name="nav_bar_previous_button_text">Previous</string>
    <string name="nav_bar_next_button_text">Next</string>

    <!--Fragment recipe step detail strings-->
    <string name="tv_step_full_desc_tag_text">Step Description</string>

    <!--Step Row item strings-->
    <string name="tv_ingredients_tag_text">List of Ingredients</string>
    <string name="tv_step_description_tag_text">Step Description</string>

    <!--Recipe card strings-->
    <string name="tv_recipe_servings_tag_text">Servings</string>
    <string name="player_error_play_message">CANNOT PLAY....</string>
    <string name="player_buffering_message">BUFFERING...</string>
    <string name="action_bar_text_recipe_list_fragment">List of available recipes</string>
    <string name="tv_recipe_name_widget">Recipe Name</string>
    <string name="no_video_available_text">No available video for this Step</string>
    <string name="next_video_button_text">There is no next step to navigate to.</string>
    <string name="previous_button_video_text">There is no previous step to navigate to.</string>
</resources>
